--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
